Delete Linux Ethernet Gadget from special handling. This makes at least the Openmoko Freerunner work again. Fixes PR kern/45591. Ok Jeff Rizzo (releng).